--- a/src/main/java/com/monitor/monitor.fxml
+++ b/src/main/java/com/monitor/monitor.fxml
@@ -4,13 +4,11 @@
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.monitor.MonitorController">
    <children>
@@ -20,12 +18,12 @@
               <items>
                   <VBox>
                      <children>
-                        <Text fx:id="leaderLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="Leader: 127.0.0.1" VBox.vgrow="NEVER">
+                        <Text fx:id="speedLabel" layoutX="10.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Speed:500/s">
                            <font>
                               <Font size="19.0" />
                            </font>
                         </Text>
-                        <Text fx:id="speedLabel" layoutX="10.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Speed:500/s">
+                        <Text fx:id="averageSpeedLabel" layoutX="10.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Speed:500/s">
                            <font>
                               <Font size="19.0" />
                            </font>
